<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e5e8e9">

    <TextView
        android:id="@+id/security"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/security"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.card.MaterialCardView
        app:cardElevation="@dimen/dimen_16"
        android:id="@+id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#ed7079"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/security"
        tools:layout_editor_absoluteX="32dp" />

    <TextView
        android:id="@+id/text_sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:text="@string/sos"
        android:textColor="#fff"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card" />


    <TextView
        android:id="@+id/sos_mess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="12dp"
        android:elevation="16dp"
        android:text="@string/in_case_of_emergency_keep_telling_family_members_to_contact_me"
        android:textColor="#fff"
        app:layout_constraintEnd_toStartOf="@id/sos_img"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toBottomOf="@id/text_sos" />

    <ImageView
        android:id="@+id/sos_img"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:src="@drawable/ic_sos"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card" />

    <com.google.android.material.card.MaterialCardView
        app:cardElevation="@dimen/dimen_16"
        android:id="@+id/green_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#63d2c7"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/pink_card" />

    <TextView
        android:id="@+id/text_guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:elevation="16dp"
        android:text="@string/guard"
        android:textColor="#fff"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card" />

    <TextView
        android:id="@+id/guard_mess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:elevation="16dp"
        android:text="@string/open_when_you_are_on_a_potentially_dangerous_journey"
        android:textColor="#fff"
        app:layout_constraintEnd_toStartOf="@id/guard_img"
        app:layout_constraintStart_toStartOf="@id/text_guard"
        app:layout_constraintTop_toBottomOf="@id/text_guard" />

    <ImageView
        android:id="@+id/guard_img"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:src="@drawable/ic_guard"
        app:layout_constraintBottom_toBottomOf="@id/green_card"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card" />






</androidx.constraintlayout.widget.ConstraintLayout>